--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>风险管理平台</title>
@@ -10,7 +11,7 @@
 	<div id="login">
 		<div id="login_header">
 			<h1 class="login_logo">
-				<a href="http://demo.dwzjs.com"><img src="themes/default/images/login_logo.gif" /></a>
+				<a href="http://demo.dwzjs.com"><img src="@{dwz_jui/themes/default/images/login_logo.gif}" /></a>
 			</h1>
 			<div class="login_headerContent">
 				<div class="navList">
@@ -25,7 +26,7 @@
 		</div>
 		<div id="login_content">
 			<div class="loginForm">
-				<form action="index.html">
+				<form th:action="@{/login}" method="post">
 					<p>
 						<label>用户名：</label>
 						<input type="text" name="username" size="20" class="login_input" />
@@ -40,7 +41,7 @@
 						<span><img src="themes/default/images/header_bg.png" alt="" width="75" height="24" /></span>
 					</p>
 					<div class="login_bar">
-						<input class="sub" type="submit" value=" " />
+						<input class="sub" type="submit" value="登录" />
 					</div>
 				</form>
 			</div>
