--- a/demo/src/main/resources/templates/login_mobile.html
+++ b/demo/src/main/resources/templates/login_mobile.html
@@ -20,7 +20,7 @@
 				<label for="username">用户名 ：</label>
 				<input type="text" name="username" id="username" />
 				<label for="password">密码：</label>
-				<input type="password" name="password" id="username" />
+				<input type="password" name="password" id="password" />
 			</div>
 			<input type="submit" value="登录" />
 		</form>
