--- a/demo/src/main/resources/templates/main.html
+++ b/demo/src/main/resources/templates/main.html
@@ -1,72 +1,73 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+
+<meta name="_csrf" th:content="${_csrf.token}"/>
+<meta name="_csrf_header"  th:content="${_csrf.headerName}"/>
+
+
 <title>demo-pc</title>
 
-<link href="themes/default/style.css" rel="stylesheet" type="text/css" media="screen"/>
-<link href="themes/css/core.css" rel="stylesheet" type="text/css" media="screen"/>
-<link href="themes/css/print.css" rel="stylesheet" type="text/css" media="print"/>
-<link href="uploadify/css/uploadify.css" rel="stylesheet" type="text/css" media="screen"/>
-<!--[if IE]>
-<link href="themes/css/ieHack.css" rel="stylesheet" type="text/css" media="screen"/>
-<![endif]-->
+<link th:href="@{/dwz_jui/themes/default/style.css}" rel="stylesheet" type="text/css" media="screen"/>
+<link th:href="@{/dwz_jui/themes/css/core.css}" rel="stylesheet" type="text/css" media="screen"/>
+<link th:href="@{/dwz_jui/themes/css/print.css}" rel="stylesheet" type="text/css" media="print"/>
+<link th:href="@{/dwz_jui/uploadify/css/uploadify.css}" rel="stylesheet" type="text/css" media="screen"/>
+<script th:src="@{/dwz_jui/js/jquery-2.1.4.min.js}" type="text/javascript"></script>
 
-<!--[if lt IE 9]><script src="js/speedup.js" type="text/javascript"></script><script src="js/jquery-1.11.3.min.js" type="text/javascript"></script><![endif]-->
-<!--[if gte IE 9]><!--><script src="js/jquery-2.1.4.min.js" type="text/javascript"></script><!--<![endif]-->
+<script th:src="@{/dwz_jui/js/jquery.cookie.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/jquery.validate.js}" type="text/javascript"></script>
+<!--<script th:src="@{/dwz_jui/js/jquery.bgiframe.js}" type="text/javascript"></script>-->
+<script th:src="@{/dwz_jui/xheditor/xheditor-1.2.2.min.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/xheditor/xheditor_lang/zh-cn.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/uploadify/scripts/jquery.uploadify.js}" type="text/javascript"></script>
 
-<script src="js/jquery.cookie.js" type="text/javascript"></script>
-<script src="js/jquery.validate.js" type="text/javascript"></script>
-<!--<script src="js/jquery.bgiframe.js" type="text/javascript"></script>-->
-<script src="xheditor/xheditor-1.2.2.min.js" type="text/javascript"></script>
-<script src="xheditor/xheditor_lang/zh-cn.js" type="text/javascript"></script>
-<script src="uploadify/scripts/jquery.uploadify.js" type="text/javascript"></script>
-
-<script type="text/javascript" src="chart/echarts.min.js"></script>
+<script type="text/javascript" th:src="@{/dwz_jui/chart/echarts.min.js}"></script>
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=6PYkS1eDz5pMnyfO0jvBNE0F"></script>
 <script type="text/javascript" src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>
 
-<script src="js/dwz.core.js" type="text/javascript"></script>
-<script src="js/dwz.util.date.js" type="text/javascript"></script>
-<script src="js/dwz.validate.method.js" type="text/javascript"></script>
-<script src="js/dwz.barDrag.js" type="text/javascript"></script>
-<script src="js/dwz.drag.js" type="text/javascript"></script>
-<script src="js/dwz.tree.js" type="text/javascript"></script>
-<script src="js/dwz.accordion.js" type="text/javascript"></script>
-<script src="js/dwz.ui.js" type="text/javascript"></script>
-<script src="js/dwz.theme.js" type="text/javascript"></script>
-<script src="js/dwz.switchEnv.js" type="text/javascript"></script>
-<script src="js/dwz.alertMsg.js" type="text/javascript"></script>
-<script src="js/dwz.contextmenu.js" type="text/javascript"></script>
-<script src="js/dwz.navTab.js" type="text/javascript"></script>
-<script src="js/dwz.tab.js" type="text/javascript"></script>
-<script src="js/dwz.resize.js" type="text/javascript"></script>
-<script src="js/dwz.dialog.js" type="text/javascript"></script>
-<script src="js/dwz.dialogDrag.js" type="text/javascript"></script>
-<script src="js/dwz.sortDrag.js" type="text/javascript"></script>
-<script src="js/dwz.cssTable.js" type="text/javascript"></script>
-<script src="js/dwz.stable.js" type="text/javascript"></script>
-<script src="js/dwz.taskBar.js" type="text/javascript"></script>
-<script src="js/dwz.ajax.js" type="text/javascript"></script>
-<script src="js/dwz.pagination.js" type="text/javascript"></script>
-<script src="js/dwz.database.js" type="text/javascript"></script>
-<script src="js/dwz.datepicker.js" type="text/javascript"></script>
-<script src="js/dwz.effects.js" type="text/javascript"></script>
-<script src="js/dwz.panel.js" type="text/javascript"></script>
-<script src="js/dwz.checkbox.js" type="text/javascript"></script>
-<script src="js/dwz.history.js" type="text/javascript"></script>
-<script src="js/dwz.combox.js" type="text/javascript"></script>
-<script src="js/dwz.file.js" type="text/javascript"></script>
-<script src="js/dwz.print.js" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.core.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.util.date.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.validate.method.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.barDrag.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.drag.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.tree.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.accordion.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.ui.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.theme.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.switchEnv.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.alertMsg.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.contextmenu.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.navTab.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.tab.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.resize.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.dialog.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.dialogDrag.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.sortDrag.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.cssTable.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.stable.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.taskBar.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.ajax.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.pagination.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.database.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.datepicker.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.effects.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.panel.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.checkbox.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.history.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.combox.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.file.js}" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.print.js}" type="text/javascript"></script>
 
 <!-- 可以用dwz.min.js替换前面全部dwz.*.js (注意：替换时下面dwz.regional.zh.js还需要引入)
-<script src="bin/dwz.min.js" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/bin/dwz.min.js}" type="text/javascript"></script>
 -->
-<script src="js/dwz.regional.zh.js" type="text/javascript"></script>
+<script th:src="@{/dwz_jui/js/dwz.regional.zh.js}" type="text/javascript"></script>
 
 <script type="text/javascript">
 $(function(){
-	DWZ.init("dwz.frag.xml", {
+	DWZ.init("[[@{/dwz_jui/dwz.frag.xml}]]", {
 		loginUrl:"login_dialog.html", loginTitle:"登录",	// 弹出登录对话框
 //		loginUrl:"login.html",	// 跳到登录页面
 		statusCode:{ok:200, error:300, timeout:301}, //【可选】
@@ -76,8 +77,14 @@ $(function(){
 		debug:false,	// 调试模式 【true|false】
 		callback:function(){
 			initEnv();
-			$("#themeList").theme({themeBase:"themes"}); // themeBase 相对于index页面的主题base路径
+			$("#themeList").theme({themeBase:"[[@{dwz_jui/themes}]]"}); // themeBase 相对于index页面的主题base路径
 		}
+	});
+	
+	var header = $("meta[name='_csrf_header']").attr("content");
+	var token =$("meta[name='_csrf']").attr("content");
+	$(document).ajaxSend(function(e, xhr, options) {
+	    xhr.setRequestHeader(header, token);
 	});
 });
 
@@ -93,8 +100,8 @@ $(function(){
 				<ul class="nav">
 					<li id="switchEnvBox"><a href="javascript:">（<span>北京</span>）切换城市</a>
 						<ul>
-							<li><a href="sidebar_1.html">北京</a></li>
-							<li><a href="sidebar_2.html">上海</a></li>
+							<li><a th:href="@{/sidebar_1}">北京</a></li>
+							<li><a th:href="@{/sidebar_2}">上海</a></li>
 							<li><a href="sidebar_2.html">南京</a></li>
 							<li><a href="sidebar_2.html">深圳</a></li>
 							<li><a href="sidebar_2.html">广州</a></li>
@@ -106,7 +113,7 @@ $(function(){
 					<li><a href="changepwd.html" target="dialog" rel="changepwd" width="600">设置</a></li>
 					<li><a href="http://www.cnblogs.com/dwzjs" target="_blank">博客</a></li>
 					<li><a href="http://weibo.com/dwzui" target="_blank">微博</a></li>
-					<li><a href="login.html">退出</a></li>
+					<li><a th:href="@{/login}">退出</a></li>
 				</ul>
 				<ul class="themeList" id="themeList">
 					<li theme="default"><div class="selected">蓝色</div></li>
