--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -48,7 +48,7 @@
 			<div class="login_banner"><img th:src="@{dwz_jui/themes/default/images/login_banner.jpg}" /></div>
 			<div class="login_main">
 				<ul class="helpList">
-					<li><a href="#">下载驱动程序</a></li>
+					<li><a href="#">测试rebase</a></li>
 					<li><a href="#">如何安装密钥驱动程序？</a></li>
 					<li><a href="#">忘记密码怎么办？</a></li>
 					<li><a href="#">为什么登录失败？</a></li>
