--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -27,6 +27,7 @@
 		<div id="login_content">
 			<div class="loginForm">
 				<form th:action="@{/login}" method="post">
+					<p th:if="${param.error}" style="color:red;">用户名或密码错误。</p>
 					<p>
 						<label>用户名：</label>
 						<input type="text" name="username" size="20" class="login_input" />
