--- a/demo/src/main/resources/templates/vacant/User/vacant_user.html
+++ b/demo/src/main/resources/templates/vacant/User/vacant_user.html
@@ -1,5 +1,5 @@
 <div class="pageHeader">
-	<form id="pagerForm" onsubmit="return navTabSearch(this);" th:action="@{/vacant/dept}" method="post" 
+	<form id="pagerForm" onsubmit="return navTabSearch(this);" th:action="@{/vacant/user}" method="post" 
 			th:object="${searchForm}"
 			onreset="$(this).find('select.combox').comboxReset()">
 	<input type="hidden" th:field="*{pageNum}" />
@@ -7,10 +7,13 @@
 		<table class="searchContent">
 			<tr>
 				<td>
-					行政区划：<input type="text" th:field="*{conditions['area_code_lk']}" />
+					行政区划：<input type="text" th:field="*{conditions['user.area_code_lk']}" />
 				</td>
 				<td>
-					单位名称：<input type="text" th:field="*{conditions['name_eq']}" />
+					单位名称：<input type="text" th:field="*{conditions['dept.name_blk']}" />
+				</td>
+				<td>
+					用户名：<input type="text" th:field="*{conditions['username_eq']}" />
 				</td>
 				<td>
 					每页行数：<input type="text" th:field="*{numPerPage}" style="width:22px" />
@@ -26,7 +29,7 @@
 	</form>
 </div>
 
-<div class="pageContent" th:with="p=@{/vacant/dept}">
+<div class="pageContent" th:with="p=@{/vacant/user}">
 	<div class="panelBar">
 		<ul class="toolBar">
 			<li><a class="add" th:href="${p+'/add'}" target="dialog" width="800" height="450"><span>添加</span></a></li>
@@ -37,20 +40,26 @@
 			<li><a class="edit" th:href="${p+'/edit/{row_id}'}" target="dialog" width="800" height="450"><span>修改</span></a></li>
 		</ul>
 	</div>
-	<table class="list" layoutH="90">
+	<table class="list" style="width:100%;text-align: center" layoutH="90">
 		<thead>
-			<tr style="text-align: center">
-				<th width="80">序号</th>
-				<th width="120">行政区划</th>
-				<th width="120">单位名称</th>
-				<th width="120">创建时间</th>
+			<tr>
+				<th>序号</th>
+				<th>行政区划</th>
+				<th>单位名称</th>
+				<th>姓名</th>
+				<th>用户名</th>
+				<th>状态</th>
+				<th>创建时间</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr target="row_id" th:rel="${row.id}" th:each="row,stat:${book.page}" th:object="${row}">
 				<td th:text="${stat.count}">1</td>
 				<td th:text="*{area_code}">2201</td>
-				<td th:text="*{name}">长春市民政局</td>
+				<td th:text="*{dept_name}">长春市民政局</td>
+				<td th:text="*{name}">张协会</td>
+				<td th:text="*{username}">zxh</td>
+				<td th:text="*{state}">有效</td>
 				<td th:text="*{create_time}">2019-04-28 20:15:00</td>
 			</tr>
 		</tbody>
