--- a/demo/src/main/resources/templates/vacant/User/vacant_user_add.html
+++ b/demo/src/main/resources/templates/vacant/User/vacant_user_add.html
@@ -10,7 +10,7 @@
 				<dt>单位名称：</dt>
 				<dd>
 					<input type="text" th:field="*{dept.name}" maxlength="50" class="required readonly" readonly />
-					<a class="btnLook" th:href="${'/vacant/dept/lookup'}" lookupGroup="">查找带回</a>
+					<a class="btnLook" th:href="${'/vacant/dept/lookup'}" lookupGroup="">选择用户所属单位</a>
 				</dd>
 			</dl>
 			<dl>
