--- a/demo/src/main/resources/templates/vacant/dept/vacant_dept_lookup.html
+++ b/demo/src/main/resources/templates/vacant/dept/vacant_dept_lookup.html
@@ -7,11 +7,7 @@
 		<table class="searchContent">
 			<tr>
 				<td>
-					行政区划：<input type="text" th:field="*{conditions['area_code_lk']}" />
-					<a class="btnLook" th:href="${'/vacant/area/lookup'}" lookupGroup="">选择行政区划</a>	
-				</td>
-				<td>
-					单位名称：<input type="text" th:field="*{conditions['name_eq']}" />
+					单位名称：<input type="text" th:field="*{conditions['name_lk']}" />
 				</td>
 				<td>
 					每页行数：<input type="text" th:field="*{numPerPage}" style="width:22px" />
