--- a/demo/src/main/resources/templates/vacant/role/vacant_role.html
+++ b/demo/src/main/resources/templates/vacant/role/vacant_role.html
@@ -1,4 +1,10 @@
-<div class="pageContent">
+<div class="pageHeader">
+	<form id="pagerForm" onsubmit="return navTabSearch(this);" th:action="@{/vacant/role}" method="post" 
+			th:object="${searchForm}"
+			onreset="$(this).find('select.combox').comboxReset()">
+		<input type="hidden" th:field="*{pageNum}" />
+	</form>
+</div><div class="pageContent">
 	<div class="panelBar">
 		<ul class="toolBar" th:with="p=@{/vacant/role}">
 			<li><a class="add" th:href="${p+'/add'}" target="dialog" width="800" height="450"><span>添加</span></a></li>
