--- a/demo/src/main/resources/templates/main.html
+++ b/demo/src/main/resources/templates/main.html
@@ -91,6 +91,30 @@ $(function(){
 	$(document).ajaxSend(function(e, xhr, options) {
 	    xhr.setRequestHeader(header, token);
 	});
+	
+	// 菜单
+	var setting = {
+		callback: {
+			onClick: function(event, treeId, treeNode) {
+				if(treeNode.path) {
+					navTab.openTab(treeNode.rel, treeNode.path,{title:treeNode.name});
+				}
+			}
+		},
+		data: {
+			simpleData: {
+				enable: true
+			}
+		}
+	};
+	var url = '[[@{/main/menu/}]]';
+
+	$(document).find('.ztree').each(function(){
+		var $this = $(this);
+		ajaxTodo(url+$this.attr('parentId'),function(zNodes) {
+			$.fn.zTree.init($this, setting, zNodes);			
+		});
+	});
 });
 
 </script>
@@ -142,21 +166,13 @@ $(function(){
 			</div>
 			<div id="sidebar">
 				<div class="toggleCollapse"><h2>主菜单</h2><div>收缩</div></div>
-				<div class="accordion" fillSpace="sidebar">
+				<div class="accordion" fillSpace="sidebar" id="menu_accordion">
 					<div th:each="zxt:${zxtList}">
 						<div class="accordionHeader">
 							<h2 th:utext="${zxt.name + '<span>Folder</span>'}">最低生活保障</h2>
 						</div>
 						<div class="accordionContent">
-							<ul class="tree treeFolder" th:each="tree:${zxt.children}">
-								<li><a th:text="${tree.name}">低保户管理</a>
-									<ul>
-										<li th:each="leaf:${tree.children}">
-											<a th:href="@{${leaf.path}}" target="navTab" th:rel="${leaf.rel}" th:text="${leaf.name}">低保户申请登记</a>
-										</li>
-									</ul>
-								</li>
-							</ul>
+							<ul class="ztree" th:id="${zxt.id}" th:parentId="${zxt.id}"></ul>
 						</div>
 					</div>
 				</div>
