重构AjaxResponse的一些方法名 实现修改密码

--- a/demo/src/main/resources/templates/vacant/User/vacant_user_edit.html
+++ b/demo/src/main/resources/templates/vacant/User/vacant_user_edit.html
@@ -1,5 +1,4 @@
-<div class="pageContent" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<div class="pageContent">
 	
 	<form class="pageForm required-validate" onsubmit="return validateCallback(this, navTabAjaxDone)" 
 			th:object="${o}" th:action="@{/vacant/user/edit}" method="post">
