重写LookupService的text方法，第一次使用该方法时将数据保存到内存中（hashmap），以后直接从内存中进行查找

--- a/demo/src/main/resources/templates/vacant/User/vacant_user.html
+++ b/demo/src/main/resources/templates/vacant/User/vacant_user.html
@@ -47,6 +47,8 @@
 						target="ajaxTodo" title="确定要删除吗?"><span>删除</span></a></li>
 			<li class="line">line</li>
 			<li><a class="edit" th:href="${p+'/edit/{row_id}'}" target="navTab" rel="user"><span>修改</span></a></li>
+			<li class="line">line</li>
+			<li><a class="delete" th:href="${p+'/jmxnbj'}" target="ajaxTodo"><span>解码性能比较</span></a></li>
 		</ul>
 	</div>
 	<table class="list" style="width:100%;text-align: center" layoutH="90">
