--- a/demo/src/main/resources/templates/vacant/role/vacant_role_edit.html
+++ b/demo/src/main/resources/templates/vacant/role/vacant_role_edit.html
@@ -31,6 +31,8 @@ $(function(){
 	var id = $('#id',$p).val();
 	if(id) {
 		url += '/' + id;
+	} else {
+		url += '/no_this_id';
 	}
 	ajaxTodo(url,function(zNodes) {
 		$.fn.zTree.init($('#tree', $p), setting, zNodes);
