--- a/demo/src/main/resources/templates/demo/upload/demo_upload.html
+++ b/demo/src/main/resources/templates/demo/upload/demo_upload.html
@@ -26,7 +26,9 @@
 <div class="pageContent" th:with="p=@{/demo/upload}">
 	<div class="panelBar">
 		<ul class="toolBar">
-			<li><a class="add" th:href="${p+'/add'}" target="dialog" rel="editUpload" width="800" height="450"><span>添加</span></a></li>
+			<li><a class="add" th:href="${p+'/add/1'}" target="dialog" rel="editUpload" width="800" height="450"><span>上传单个图片</span></a></li>
+			<li><a class="add" th:href="${p+'/add/n'}" target="dialog" rel="editUpload" width="800" height="450"><span>上传多个图片</span></a></li>
+			<li><a class="add" th:href="${p+'/add/f'}" target="dialog" rel="editUpload" width="800" height="450"><span>上传文件</span></a></li>
 			<li class="line">line</li>
 			<li><a class="delete" th:href="${p+'/delete/{row_id}'}" 
 						target="ajaxTodo" title="确定要删除吗?"><span>删除</span></a></li>
@@ -34,11 +36,11 @@
 			<li><a class="edit" th:href="${p+'/edit/{row_id}'}" target="dialog" rel="editUpload" width="800" height="450"><span>修改</span></a></li>
 		</ul>
 	</div>
-	<table class="list" layoutH="90">
+	<table class="list" layoutH="90" style="text-align: center">
 		<thead>
-			<tr style="text-align: center">
-				<th width="200">id</th>
-				<th width="200">类型</th>
+			<tr>
+				<th width="300">id</th>
+				<th width="100">类型</th>
 				<th width="120">创建时间</th>
 				<th width="120">创建人</th>
 			</tr>
@@ -46,7 +48,7 @@
 		<tbody>
 			<tr target="row_id" th:rel="${row.id}" th:each="row,stat:${book.page}" th:object="${row}">
 				<td th:text="*{id}">6919feca-58f2-49f4-ae6a-ed911290ab5a</td>
-				<td th:text="${#lookups.text('demo_upload_type'),row.type}">230K</td>
+				<td th:text="${#lookups.text('demo_upload_type',row.type)}">230K</td>
 				<td th:text="*{create_time}" style="text-align: center">2019-04-28 20:15:00</td>
 				<td th:text="*{create_user}" style="text-align: center">郑志强</td>
 			</tr>
