--- a/demo/src/main/resources/templates/demo/upload/demo_upload_addn.html
+++ b/demo/src/main/resources/templates/demo/upload/demo_upload_addn.html
@@ -1,12 +1,10 @@
 <div class="pageContent" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 	
-	<form class="pageForm required-validate"  enctype="multipart/form-data"
+	<form class="pageForm required-validate" enctype="multipart/form-data"
 			onsubmit="return iframeCallback(this, dialogAjaxDone)" 
-			th:object="${o}" th:action="@{/demo/upload/edit}" method="post">
-		<input type="hidden" th:field="*{id}" />
+			th:object="${o}" th:action="@{/demo/upload/add}" method="post">
 		<input type="hidden" th:field="*{type}" />
-		<input type="hidden" th:field="*{createTime}" />
 		<div class="pageFormContent nowrap" layoutH="58">
 			<dl>
 				<dt>说明：</dt>
@@ -17,12 +15,9 @@
 			<dl>
 				<dt>选择文件：</dt>
 				<dd>
-					<div class="upload-wrap">
-						<input type="file" name="files" accept="image/*" class="valid" style="left: 0px;">
-						<div class="thumbnail" th:each="attach:${attachList}">
-							<img th:src="@{'/demo/attach/download/'+${attach.id}}" style="max-width: 80px; max-height: 80px">
-							<a class="del-icon" th:href="@{'/demo/attach/delete/'+${attach.id}}"></a>
-						</div>
+					<ul id="upload-preview" class="upload-preview"></ul>
+					<div class="upload-wrap" rel="#upload-preview">
+						<input type="file" name="files" accept="image/*" multiple="multiple">
 					</div>
 				</dd>
 			</dl>
