--- a/demo/src/main/resources/templates/demo/upload/demo_upload_editn.html
+++ b/demo/src/main/resources/templates/demo/upload/demo_upload_editn.html
@@ -1,17 +1,26 @@
-<div class="pageContent" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-	
-	<form class="pageForm required-validate" onsubmit="return validateCallback(this, dialogAjaxDone)" 
-			th:object="${o}" th:action="@{/demo/attach/save}" method="post">
+<div class="pageContent" >	
+	<form class="pageForm required-validate"  enctype="multipart/form-data"
+			onsubmit="return iframeCallback(this, dialogAjaxDone)" 
+			th:object="${o}" th:action="@{/demo/upload/edit}" method="post">
 		<input type="hidden" th:field="*{id}" />
+		<input type="hidden" th:field="*{type}" />
 		<input type="hidden" th:field="*{createTime}" />
 		<div class="pageFormContent nowrap" layoutH="58">
-			<dl>
-				<dt>说明：</dt>
-				<dd>
-					<input type="text" th:field="*{desc}" maxlength="50" class="required" />
-				</dd>
-			</dl>
+			<div class="unit">
+				<label>说明：</label>
+				<input type="text" th:field="*{desc}" maxlength="50" class="required" />
+			</div>
+			<div class="unit">
+				<label>选择文件：</label>
+				<ul id="upload-preview" class="upload-preview">
+					<li class="thumbnail" th:each="attach,stat:${attachList}">
+						<img th:src="@{'/demo/attach/download/'+${attach.id}}" style="max-width: 80px; max-height: 80px">
+					</li>
+				</ul>
+				<div class="upload-wrap" rel="#upload-preview">
+					<input type="file" name="files" accept="image/*" class="valid" multiple="multiple">
+				</div>
+			</div>
 		</div>
 		<div class="formBar">
 			<ul>
